# cxx-project-skeleton

./: CMakeLists.txt  README.md  configure  toolchain-mingw-w64-linux.cmake
doc/: anything.md
include/project-name/: example.hpp
src/: example.cpp  main.cpp
